--- a/index.html
+++ b/index.html
@@ -646,10 +646,10 @@
                 </quote>
               </h2>
               <p>
-                <quote>
+                <blockquote>
                   "The Milky Way is nothing else but a mass of innumerable stars
                   planted together in clusters"
-                </quote>
+                </blockquote>
               </p>
               <i>Galileo Galilei</i>
             </div>
@@ -668,9 +668,269 @@
             </ul>
             <div class="slider">
               <div class="list">
+                <div class="item active">
+                  <div class="information">
+                    <div class="title">
+                      <ul>
+                        <h2>1Thông Tin Cơ Bản</h2>
+                        <li>
+                          <b>Kích thước:</b> Đường kính lớn hơn từ 10 đến 1.000 lần so
+                          với Mặt Trời
+                        </li>
+                        <li>
+                          <b>Khối lượng:</b> Từ 3 đến 120 lần khối lượng của Mặt Trời.
+                        </li>
+                        <li><b>Nhiệt độ bề mặt:</b> Từ 3.000 đến 5.000 Kelvin</li>
+                        <li>
+                          <b>Độ sáng:</b> Từ 10.000 đến 100.000 lần sáng hơn so với Mặt
+                          Trời
+                        </li>
+                        <li><b>Tuổi đời:</b> Chỉ khoảng vài triệu năm</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="ex">
+                    <div class="in-ex">
+                      <div class="title">
+                        <ul><h2>R-Doradus</h2>
+                          <li><b>Loại Sao:</b> Sao khổng lồ đỏ</li>
+                          <li><b>Kích thước:</b> Lớn hơn 370 đến 610 lần so với Mặt Trời</li>
+                          <li><b>Khoảng cách đế hệ Mặt Trời:</b>  Ước tính khoảng 178 năm ánh sáng</li>
+                        </ul>
+                      <img src="images/Stellar-classification/R-doradus.png" alt="">
+                    </div>
+                    </div>
+                    <div class="in-ex">
+                      <div class="title">
+                        <ul><h2>Bellatrix </h2>
+                          <li><b>Loại Sao:</b> Sao khổng lồ xanh</li>
+                          <li><b>Kích thước:</b> Lớn hơn 6,6 lần so với Mặt Trời</li>
+                          <li><b>Khoảng cách đế hệ Mặt Trời:</b>  Ước tính khoảng  243 năm ánh sáng</li>
+                        </ul>
+                      <img src="images/Stellar-classification/Bellatrix.jpg" alt="">
+                    </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="item">
-                  <div class="information"></div>
-                  <div class="ex"></div>
+                  <div class="information">
+                    <div class="title">
+                      <ul>
+                        <h2>2Thông Tin Cơ Bản</h2>
+                        <li>
+                          <b>Kích thước:</b> Đường kính lớn hơn từ 10 đến 1.000 lần so
+                          với Mặt Trời
+                        </li>
+                        <li>
+                          <b>Khối lượng:</b> Từ 3 đến 120 lần khối lượng của Mặt Trời.
+                        </li>
+                        <li><b>Nhiệt độ bề mặt:</b> Từ 3.000 đến 5.000 Kelvin</li>
+                        <li>
+                          <b>Độ sáng:</b> Từ 10.000 đến 100.000 lần sáng hơn so với Mặt
+                          Trời
+                        </li>
+                        <li><b>Tuổi đời:</b> Chỉ khoảng vài triệu năm</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="ex">
+                    <div class="in-ex">
+                      <div class="title">
+                        <ul><h2>R-Doradus</h2>
+                          <li><b>Loại Sao:</b> Sao khổng lồ đỏ</li>
+                          <li><b>Kích thước:</b> Lớn hơn 370 đến 610 lần so với Mặt Trời</li>
+                          <li><b>Khoảng cách đế hệ Mặt Trời:</b>  Ước tính khoảng 178 năm ánh sáng</li>
+                        </ul>
+                      <img src="images/Stellar-classification/R-doradus.png" alt="">
+                    </div>
+                    </div>
+                    <div class="in-ex">
+                      <div class="title">
+                        <ul><h2>Bellatrix </h2>
+                          <li><b>Loại Sao:</b> Sao khổng lồ xanh</li>
+                          <li><b>Kích thước:</b> Lớn hơn 6,6 lần so với Mặt Trời</li>
+                          <li><b>Khoảng cách đế hệ Mặt Trời:</b>  Ước tính khoảng  243 năm ánh sáng</li>
+                        </ul>
+                      <img src="images/Stellar-classification/Bellatrix.jpg" alt="">
+                    </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="information">
+                    <div class="title">
+                      <ul>
+                        <h2>3Thông Tin Cơ Bản</h2>
+                        <li>
+                          <b>Kích thước:</b> Đường kính lớn hơn từ 10 đến 1.000 lần so
+                          với Mặt Trời
+                        </li>
+                        <li>
+                          <b>Khối lượng:</b> Từ 3 đến 120 lần khối lượng của Mặt Trời.
+                        </li>
+                        <li><b>Nhiệt độ bề mặt:</b> Từ 3.000 đến 5.000 Kelvin</li>
+                        <li>
+                          <b>Độ sáng:</b> Từ 10.000 đến 100.000 lần sáng hơn so với Mặt
+                          Trời
+                        </li>
+                        <li><b>Tuổi đời:</b> Chỉ khoảng vài triệu năm</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="ex">
+                    <div class="in-ex">
+                      <div class="title">
+                        <ul><h2>R-Doradus</h2>
+                          <li><b>Loại Sao:</b> Sao khổng lồ đỏ</li>
+                          <li><b>Kích thước:</b> Lớn hơn 370 đến 610 lần so với Mặt Trời</li>
+                          <li><b>Khoảng cách đế hệ Mặt Trời:</b>  Ước tính khoảng 178 năm ánh sáng</li>
+                        </ul>
+                      <img src="images/Stellar-classification/R-doradus.png" alt="">
+                    </div>
+                    </div>
+                    <div class="in-ex">
+                      <div class="title">
+                        <ul><h2>Bellatrix </h2>
+                          <li><b>Loại Sao:</b> Sao khổng lồ xanh</li>
+                          <li><b>Kích thước:</b> Lớn hơn 6,6 lần so với Mặt Trời</li>
+                          <li><b>Khoảng cách đế hệ Mặt Trời:</b>  Ước tính khoảng  243 năm ánh sáng</li>
+                        </ul>
+                      <img src="images/Stellar-classification/Bellatrix.jpg" alt="">
+                    </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="information">
+                    <div class="title">
+                      <ul>
+                        <h2>Thông Tin Cơ Bản</h2>
+                        <li>
+                          <b>Kích thước:</b> Đường kính lớn hơn từ 10 đến 1.000 lần so
+                          với Mặt Trời
+                        </li>
+                        <li>
+                          <b>Khối lượng:</b> Từ 3 đến 120 lần khối lượng của Mặt Trời.
+                        </li>
+                        <li><b>Nhiệt độ bề mặt:</b> Từ 3.000 đến 5.000 Kelvin</li>
+                        <li>
+                          <b>Độ sáng:</b> Từ 10.000 đến 100.000 lần sáng hơn so với Mặt
+                          Trời
+                        </li>
+                        <li><b>Tuổi đời:</b> Chỉ khoảng vài triệu năm</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="ex">
+                    <div class="in-ex">
+                      <div class="title">
+                        <ul><h2>R-Doradus</h2>
+                          <li><b>Loại Sao:</b> Sao khổng lồ đỏ</li>
+                          <li><b>Kích thước:</b> Lớn hơn 370 đến 610 lần so với Mặt Trời</li>
+                          <li><b>Khoảng cách đế hệ Mặt Trời:</b>  Ước tính khoảng 178 năm ánh sáng</li>
+                        </ul>
+                      <img src="images/Stellar-classification/R-doradus.png" alt="">
+                    </div>
+                    </div>
+                    <div class="in-ex">
+                      <div class="title">
+                        <ul><h2>Bellatrix </h2>
+                          <li><b>Loại Sao:</b> Sao khổng lồ xanh</li>
+                          <li><b>Kích thước:</b> Lớn hơn 6,6 lần so với Mặt Trời</li>
+                          <li><b>Khoảng cách đế hệ Mặt Trời:</b>  Ước tính khoảng  243 năm ánh sáng</li>
+                        </ul>
+                      <img src="images/Stellar-classification/Bellatrix.jpg" alt="">
+                    </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="information">
+                    <div class="title">
+                      <ul>
+                        <h2>Thông Tin Cơ Bản</h2>
+                        <li>
+                          <b>Kích thước:</b> Đường kính lớn hơn từ 10 đến 1.000 lần so
+                          với Mặt Trời
+                        </li>
+                        <li>
+                          <b>Khối lượng:</b> Từ 3 đến 120 lần khối lượng của Mặt Trời.
+                        </li>
+                        <li><b>Nhiệt độ bề mặt:</b> Từ 3.000 đến 5.000 Kelvin</li>
+                        <li>
+                          <b>Độ sáng:</b> Từ 10.000 đến 100.000 lần sáng hơn so với Mặt
+                          Trời
+                        </li>
+                        <li><b>Tuổi đời:</b> Chỉ khoảng vài triệu năm</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="ex">
+                    <div class="in-ex">
+                      <div class="title">
+                        <ul><h2>R-Doradus</h2>
+                          <li><b>Loại Sao:</b> Sao khổng lồ đỏ</li>
+                          <li><b>Kích thước:</b> Lớn hơn 370 đến 610 lần so với Mặt Trời</li>
+                          <li><b>Khoảng cách đế hệ Mặt Trời:</b>  Ước tính khoảng 178 năm ánh sáng</li>
+                        </ul>
+                      <img src="images/Stellar-classification/R-doradus.png" alt="">
+                    </div>
+                    </div>
+                    <div class="in-ex">
+                      <div class="title">
+                        <ul><h2>Bellatrix </h2>
+                          <li><b>Loại Sao:</b> Sao khổng lồ xanh</li>
+                          <li><b>Kích thước:</b> Lớn hơn 6,6 lần so với Mặt Trời</li>
+                          <li><b>Khoảng cách đế hệ Mặt Trời:</b>  Ước tính khoảng  243 năm ánh sáng</li>
+                        </ul>
+                      <img src="images/Stellar-classification/Bellatrix.jpg" alt="">
+                    </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="information">
+                    <div class="title">
+                      <ul>
+                        <h2>Thông Tin Cơ Bản</h2>
+                        <li>
+                          <b>Kích thước:</b> Đường kính lớn hơn từ 10 đến 1.000 lần so
+                          với Mặt Trời
+                        </li>
+                        <li>
+                          <b>Khối lượng:</b> Từ 3 đến 120 lần khối lượng của Mặt Trời.
+                        </li>
+                        <li><b>Nhiệt độ bề mặt:</b> Từ 3.000 đến 5.000 Kelvin</li>
+                        <li>
+                          <b>Độ sáng:</b> Từ 10.000 đến 100.000 lần sáng hơn so với Mặt
+                          Trời
+                        </li>
+                        <li><b>Tuổi đời:</b> Chỉ khoảng vài triệu năm</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="ex">
+                    <div class="in-ex">
+                      <div class="title">
+                        <ul><h2>R-Doradus</h2>
+                          <li><b>Loại Sao:</b> Sao khổng lồ đỏ</li>
+                          <li><b>Kích thước:</b> Lớn hơn 370 đến 610 lần so với Mặt Trời</li>
+                          <li><b>Khoảng cách đế hệ Mặt Trời:</b>  Ước tính khoảng 178 năm ánh sáng</li>
+                        </ul>
+                      <img src="images/Stellar-classification/R-doradus.png" alt="">
+                    </div>
+                    </div>
+                    <div class="in-ex">
+                      <div class="title">
+                        <ul><h2>Bellatrix </h2>
+                          <li><b>Loại Sao:</b> Sao khổng lồ xanh</li>
+                          <li><b>Kích thước:</b> Lớn hơn 6,6 lần so với Mặt Trời</li>
+                          <li><b>Khoảng cách đế hệ Mặt Trời:</b>  Ước tính khoảng  243 năm ánh sáng</li>
+                        </ul>
+                      <img src="images/Stellar-classification/Bellatrix.jpg" alt="">
+                    </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
