--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="reponsive.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/reponsive.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Bách Khoa Thiên Văn</title>
   </head>
   <body>
-    <div id="wrap">
+    <div id="wrapper">
       <div>
         <header>
           <div class="full-body">
@@ -293,7 +294,7 @@
 
                     <div class="new1 new">
                       <img class="zoom" src="images/news/img1.jpg" alt="" />
-                      <a href="#" alt="">
+                      <a href="htmls/news1.html" alt="">
                         <div class="content">
                           <p class="logo">M A - H</p>
                           <div class="title">
@@ -312,7 +313,7 @@
                     <div class="right">
                       <div class="new2 new">
                         <img class="zoom" src="images/news/img2.jpg" alt="" />
-                        <a href="#" alt="">
+                        <a href="htmls/news2.html" alt="">
                           <div class="content">
                             <p class="logo">M A - H</p>
                             <div class="title">
@@ -330,7 +331,7 @@
 
                       <div class="new3 new">
                         <img class="zoom" src="images/news/img3.jpg" alt="" />
-                        <a href="#" alt="">
+                        <a href="htmls/news3.html" alt="">
                           <div class="content">
                             <p class="logo">M A - H</p>
                             <div class="title">
@@ -348,7 +349,7 @@
 
                       <div class="new4 new">
                         <img class="zoom" src="images/news/img4.webp" alt="" />
-                        <a href="#" alt="">
+                        <a href="htmls/news4.html" alt="">
                           <div class="content">
                             <p class="logo">M A - H</p>
                             <div class="title">
@@ -362,69 +363,69 @@
                       </div>
                     </div>
                   </div>
-                  <!-- side n -->
+                  <!-- side news -->
                   <div class="side-news">
                     <div class="new5 new">
                       <!-- https://vnexpress.net/co-hoi-quan-sat-nguyet-thuc-mot-phan-4668368.html -->
-                      <div class="container-img">
-                        <img src="images/news/img5.jpg" alt="" class="zoom" />
-                      </div>
-                      <div class="side-news-left">
-                        <div class="side-news-title">
-                          <p class="logo">M A - H</p>
-                          <a href=""
-                            ><p class="tit">
-                              Cơ hội quan sát nguyệt thực một phần
-                            </p></a
-                          >
-                          <h3>
-                            Rạng sáng 29/10, những người yêu thiên văn sẽ có cơ
-                            hội theo dõi nguyệt thực một phần,...
-                          </h3>
+                      <a href="htmls/news5.html"
+                        ><div class="container-img">
+                          <img src="images/news/img5.jpg" alt="" class="zoom" />
                         </div>
-                      </div>
+                        <div class="side-news-left">
+                          <div class="side-news-title">
+                            <p class="logo">M A - H</p>
+                            <p class="tit">
+                              Cơ hội quan sát nguyệt thực một phần
+                            </p>
+                            <h3>
+                              Rạng sáng 29/10, những người yêu thiên văn sẽ có
+                              cơ hội theo dõi nguyệt thực một phần,...
+                            </h3>
+                          </div>
+                        </div>
+                      </a>
                     </div>
                     <div class="new6 new">
                       <!-- https://thienvanvietnam.org/index.php?option=com_content&view=article&id=2371:s-pha-h-y-hanh-tinh-trong-cac-h-co-th-kha-ph-bi-n&catid=27&Itemid=135 -->
-                      <div class="container-img">
-                        <img src="images/news/img6.jpg" alt="" class="zoom" />
-                      </div>
-                      <div class="side-news-left">
-                        <div class="side-news-title">
-                          <p class="logo">M A - H</p>
-                          <a href=""
-                            ><p class="tit">
+                      <a href="htmls/news6.html"
+                        ><div class="container-img">
+                          <img src="images/news/img6.jpg" alt="" class="zoom" />
+                        </div>
+                        <div class="side-news-left">
+                          <div class="side-news-title">
+                            <p class="logo">M A - H</p>
+                            <p class="tit">
                               Sự phá hủy hành tinh trong các hệ có thể khá phổ
                               biến
-                            </p></a
-                          >
-                          <h3>
-                            Các hệ hành tinh có ổn định không? Liệu Trái Đất và
-                            những "anh em" của nó...
-                          </h3>
+                            </p>
+                            <h3>
+                              Các hệ hành tinh có ổn định không? Liệu Trái Đất
+                              và những "anh em" của nó...
+                            </h3>
+                          </div>
                         </div>
-                      </div>
+                      </a>
                     </div>
                     <div class="new7 new">
                       <!-- https://thienvanvietnam.org/index.php?option=com_content&view=article&id=2362:dai-quan-sat-elt-co-th-nhin-th-y-nh-ng-gi-t-hanh-tinh-c-a-proxima-centauri&catid=27&Itemid=135 -->
-                      <div class="container-img">
-                        <img src="images/news/img7.jpg" alt="" class="zoom" />
-                      </div>
-                      <div class="side-news-left">
-                        <div class="side-news-title">
-                          <p class="logo">M A - H</p>
-                          <a href=""
-                            ><p class="tit">
+                      <a href="htmls/news7.html"
+                        ><div class="container-img">
+                          <img src="images/news/img7.jpg" alt="" class="zoom" />
+                        </div>
+                        <div class="side-news-left">
+                          <div class="side-news-title">
+                            <p class="logo">M A - H</p>
+                            <p class="tit">
                               Đài quan sát ELT có thể nhìn thấy những gì từ hành
                               tinh của Proxima Centauri?
-                            </p></a
-                          >
-                          <h3>
-                            Rạng sáng 29/10, những người yêu thiên văn sẽ có cơ
-                            hội theo dõi nguyệt thực một phần,...
-                          </h3>
+                            </p>
+                            <h3>
+                              Rạng sáng 29/10, những người yêu thiên văn sẽ có
+                              cơ hội theo dõi nguyệt thực một phần,...
+                            </h3>
+                          </div>
                         </div>
-                      </div>
+                      </a>
                     </div>
                   </div>
                   <a class="new-more" href="">Thêm Nhiều Tin Tức Hơn</a>
@@ -470,7 +471,7 @@
                           lỏng, cho nên chúng không có bề mặt xác định.
                         </p>
                         <br />
-                        <a href="">Xem Thêm</a>
+                        <a href="htmls/solar-system.html">Xem Thêm</a>
                       </div>
                     </div>
                     <div
@@ -492,7 +493,7 @@
                           thiên văn AU).
                         </p>
                         <br />
-                        <a href="">Xem Thêm</a>
+                        <a href="/htmls/sun.html">Xem Thêm</a>
                       </div>
                     </div>
                     <div
@@ -698,7 +699,7 @@
                     <div class="information">
                       <div class="title">
                         <ul>
-                          <h2>1Thông Tin Cơ Bản</h2>
+                          <h2>Thông Tin Cơ Bản</h2>
                           <li>
                             <b>Kích thước:</b> Đường kính lớn hơn từ 10 đến
                             1.000 lần so với Mặt Trời
@@ -714,7 +715,10 @@
                             <b>Độ sáng:</b> Từ 10.000 đến 100.000 lần sáng hơn
                             so với Mặt Trời
                           </li>
-                          <li><b>Tuổi đời:</b> Chỉ khoảng vài triệu năm</li>
+                          <li>
+                            <b>Tuổi đời:</b> Chỉ khoảng vài chục triệu đén vài
+                            tỉ năm
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -766,19 +770,18 @@
                         <ul>
                           <h2>2Thông Tin Cơ Bản</h2>
                           <li>
-                            <b>Kích thước:</b> Đường kính lớn hơn từ 10 đến
-                            1.000 lần so với Mặt Trời
+                            <b>Kích thước:</b> Đường kính lớn hơn từ 1.280 đến
+                            2100 lần so với Mặt Trời
                           </li>
                           <li>
-                            <b>Khối lượng:</b> Từ 3 đến 120 lần khối lượng của
+                            <b>Khối lượng:</b> Từ 100 đến 150 lần khối lượng của
                             Mặt Trời.
                           </li>
                           <li>
-                            <b>Nhiệt độ bề mặt:</b> Từ 3.000 đến 5.000 Kelvin
+                            <b>Nhiệt độ bề mặt:</b> Từ 3.050 đến 35.000 Kelvin
                           </li>
                           <li>
-                            <b>Độ sáng:</b> Từ 10.000 đến 100.000 lần sáng hơn
-                            so với Mặt Trời
+                            <b>Độ sáng:</b> gấp hàng triệu lần so với Mặt Trời
                           </li>
                           <li><b>Tuổi đời:</b> Chỉ khoảng vài triệu năm</li>
                         </ul>
@@ -788,15 +791,15 @@
                       <div class="in-ex">
                         <div class="title">
                           <ul>
-                            <h2>R-Doradus</h2>
-                            <li><b>Loại Sao:</b> Sao khổng lồ đỏ</li>
+                            <h2>Betelgeuse</h2>
+                            <li><b>Loại Sao:</b> Sao siêu khổng lồ đỏ</li>
                             <li>
-                              <b>Kích thước:</b> Lớn hơn 370 đến 610 lần so với
-                              Mặt Trời
+                              <b>Kích thước:</b> Lớn hơn 1.180 lần so với Mặt
+                              Trời
                             </li>
                             <li>
                               <b>Khoảng cách đế hệ Mặt Trời:</b> Ước tính khoảng
-                              178 năm ánh sáng
+                              643 năm ánh sáng
                             </li>
                           </ul>
                           <img
@@ -811,7 +814,8 @@
                             <h2>Bellatrix</h2>
                             <li><b>Loại Sao:</b> Sao khổng lồ xanh</li>
                             <li>
-                              <b>Kích thước:</b> Lớn hơn 6,6 lần so với Mặt Trời
+                              <b>Kích thước:</b> Lớn hơn 2010 lần so với Mặt
+                              Trời
                             </li>
                             <li>
                               <b>Khoảng cách đế hệ Mặt Trời:</b> Ước tính khoảng
@@ -1275,6 +1279,6 @@
         </footer>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
