--- a/htmls/mars.html
+++ b/htmls/mars.html
@@ -111,15 +111,17 @@
       <main>
         <div
           class="SS-intro"
-          style="background-image: url(/images/Solar-System/img2.jpg)"
+          style="background-image: url(/images/Solar-System/img5.jpg)"
         >
           <div class="content-2">
             <div class="content">
-              <h1>Sao Thuỷ - Mercury</h1>
+              <h1>Sao Hoả - Mars</h1>
               <p>
-                Sao Thủy (tiếng Anh: Mercury) hay Thủy Tinh (chữ Hán: 水星) là
-                hành tinh nhỏ nhất và gần Mặt Trời nhất trong tám hành tinh
-                thuộc hệ Mặt Trời.
+                Sao Hỏa (tiếng Anh: Mars) hay Hỏa Tinh (chữ Hán: 火星) là hành
+                tinh thứ tư ở Hệ Mặt Trời và là hành tinh đất đá ở xa Mặt Trời
+                nhất, với bán kính bé thứ hai so với các hành tinh khác. Sao Hoả
+                có màu cam đỏ do bề mặt của hành tinh được bao phủ bởi lớp vụn
+                sắt(III) oxit, do đó còn có tên gọi khác là "hành tinh đỏ".
               </p>
             </div>
           </div>
