--- a/htmls/neptune.html
+++ b/htmls/neptune.html
@@ -111,15 +111,20 @@
       <main>
         <div
           class="SS-intro"
-          style="background-image: url(/images/Solar-System/img2.jpg)"
+          style="background-image: url(/images/Solar-System/img9.jpg)"
         >
           <div class="content-2">
             <div class="content">
-              <h1>Sao Thuỷ - Mercury</h1>
+              <h1>Sao Hải Vương - Neptune</h1>
               <p>
-                Sao Thủy (tiếng Anh: Mercury) hay Thủy Tinh (chữ Hán: 水星) là
-                hành tinh nhỏ nhất và gần Mặt Trời nhất trong tám hành tinh
-                thuộc hệ Mặt Trời.
+                Sao Hải Vương (tiếng Anh: Neptune), hay Hải Vương Tinh (chữ Hán:
+                海王星) là hành tinh thứ tám và xa nhất tính từ Mặt Trời trong
+                Hệ Mặt Trời. Nó là hành tinh lớn thứ tư về đường kính và lớn thứ
+                ba về khối lượng. Sao Hải Vương có khối lượng riêng lớn nhất
+                trong số các hành tinh khí trong hệ Mặt trời. Sao Hải Vương có
+                khối lượng gấp 17 lần khối lượng của Trái Đất và hơi lớn hơn
+                khối lượng của Sao Thiên Vương (xấp xỉ bằng 15 lần của Trái
+                Đất).
               </p>
             </div>
           </div>
