--- a/htmls/uranus.html
+++ b/htmls/uranus.html
@@ -111,15 +111,16 @@
       <main>
         <div
           class="SS-intro"
-          style="background-image: url(/images/Solar-System/img2.jpg)"
+          style="background-image: url(/images/Solar-System/img8.jpg)"
         >
           <div class="content-2">
             <div class="content">
-              <h1>Sao Thuỷ - Mercury</h1>
+              <h1>Sao Thiên Vương - Uranus</h1>
               <p>
-                Sao Thủy (tiếng Anh: Mercury) hay Thủy Tinh (chữ Hán: 水星) là
-                hành tinh nhỏ nhất và gần Mặt Trời nhất trong tám hành tinh
-                thuộc hệ Mặt Trời.
+                Sao Thiên Vương (tiếng Anh: Uranus) hay Thiên Vương Tinh (chữ
+                Hán: 天王星) là hành tinh thứ bảy tính từ Mặt Trời, là hành tinh
+                có bán kính lớn thứ ba và có khối lượng lớn thứ tư trong Hệ Mặt
+                Trời. Sao Thiên Vương có thành phần tương tự như Sao Hải Vương.
               </p>
             </div>
           </div>
