--- a/htmls/jupiter.html
+++ b/htmls/jupiter.html
@@ -111,15 +111,18 @@
       <main>
         <div
           class="SS-intro"
-          style="background-image: url(/images/Solar-System/img2.jpg)"
+          style="background-image: url(/images/Solar-System/img6.webp)"
         >
           <div class="content-2">
             <div class="content">
-              <h1>Sao Thuỷ - Mercury</h1>
+              <h1>Sao Mộc - Jupiter</h1>
               <p>
-                Sao Thủy (tiếng Anh: Mercury) hay Thủy Tinh (chữ Hán: 水星) là
-                hành tinh nhỏ nhất và gần Mặt Trời nhất trong tám hành tinh
-                thuộc hệ Mặt Trời.
+                Sao Mộc (tiếng Anh: Jupiter) hay Mộc Tinh (chữ Hán: 木星) là
+                hành tinh thứ năm tính từ Mặt Trời và là hành tinh lớn nhất
+                trong Hệ Mặt Trời.[12] Nó là hành tinh khí khổng lồ với khối
+                lượng bằng một phần nghìn của Mặt Trời nhưng bằng hai lần rưỡi
+                tổng khối lượng của tất cả các hành tinh khác trong Hệ Mặt Trời
+                cộng lại
               </p>
             </div>
           </div>
