--- a/htmls/saturn.html
+++ b/htmls/saturn.html
@@ -111,15 +111,18 @@
       <main>
         <div
           class="SS-intro"
-          style="background-image: url(/images/Solar-System/img2.jpg)"
+          style="background-image: url(/images/Solar-System/img7.jpg)"
         >
           <div class="content-2">
             <div class="content">
-              <h1>Sao Thuỷ - Mercury</h1>
+              <h1>Sao Thổ - Saturn</h1>
               <p>
-                Sao Thủy (tiếng Anh: Mercury) hay Thủy Tinh (chữ Hán: 水星) là
-                hành tinh nhỏ nhất và gần Mặt Trời nhất trong tám hành tinh
-                thuộc hệ Mặt Trời.
+                Sao Thổ (tiếng Anh: Saturn), hay Thổ Tinh (土星) là hành tinh
+                thứ sáu tính theo khoảng cách trung bình từ Mặt Trời và là hành
+                tinh lớn thứ hai về đường kính cũng như khối lượng, sau Sao Mộc
+                trong hệ Mặt Trời. Tên tiếng Anh của hành tinh mang tên thần
+                Saturn trong thần thoại La Mã, ký hiệu thiên văn của hành tinh
+                là (♄) thể hiện cái liềm của thần
               </p>
             </div>
           </div>
