--- a/htmls/venus.html
+++ b/htmls/venus.html
@@ -111,15 +111,16 @@
       <main>
         <div
           class="SS-intro"
-          style="background-image: url(/images/Solar-System/img2.jpg)"
+          style="background-image: url(/images/Solar-System/img3.jpg)"
         >
           <div class="content-2">
             <div class="content">
-              <h1>Sao Thuỷ - Mercury</h1>
+              <h1>Sao Kim - Venus</h1>
               <p>
-                Sao Thủy (tiếng Anh: Mercury) hay Thủy Tinh (chữ Hán: 水星) là
-                hành tinh nhỏ nhất và gần Mặt Trời nhất trong tám hành tinh
-                thuộc hệ Mặt Trời.
+                Sao Kim hay Kim Tinh (chữ Hán: 金星), còn gọi là sao Thái Bạch
+                (太白), Thái Bạch Kim Tinh (太白金星) (tiếng Anh: Venus) là hành
+                tinh thứ 2 trong Hệ Mặt Trời, tự quay quanh nó với chu kỳ khoảng
+                243 ngày Trái Đất.
               </p>
             </div>
           </div>
