--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                       <a class="navigation cpt" href="">
                         <p>Bách Khoa</p>
                       </a>
-                      <label for="bk">Bách Khoa</label>
+                      <label for="bk">Bách Khoa <span>+</span></label>
                       <input type="checkbox" name="" id="bk" />
-                      <ul>
+                      <ul class="bk">
                         <li><a href="#class-stars">Sao</a></li>
                         <li><a href="">Hệ Sao</a></li>
                         <li><a href="">Thiên Hà</a></li>
@@ -71,9 +71,9 @@
                       <a class="cpt navigation" href="#news">
                         <p>Tin Tức</p>
                       </a>
-                      <label for="tt">TinTức</label>
+                      <label for="tt">TinTức <span>+</span></label>
                       <input type="checkbox" name="" id="tt" />
-                      <ul>
+                      <ul class="tt">
                         <li><a href="">Tin Tức Chung</a></li>
                         <li><a href="">Thành Tự Mới</a></li>
                         <li><a href="">Sự Kiện Thiên Văn Nổi Bật</a></li>
@@ -527,10 +527,10 @@
                       <div class="decs">
                         <h1>Sao Kim - Venus</h1>
                         <p>
-                          Hệ Mặt Trời (tên Hán Việt: Thái Dương Hệ) bao gồm Mặt
-                          Trời và 8 hành tinh, bao gồm 4 hành tinh đất đá (Sao
-                          Thuỷ, Sao Kim, Trái Đất, Sao Hoả) và 4 hành tinh khổng
-                          lồ (Sao Mộc, Sao Thổ, Sao Thiên Vương, Sao Hải Vương)
+                          Sao Kim hay Kim Tinh (chữ Hán: 金星), còn gọi là sao
+                          Thái Bạch (太白), Thái Bạch Kim Tinh (太白金星) (tiếng
+                          Anh: Venus) là hành tinh thứ 2 trong Hệ Mặt Trời, tự
+                          quay quanh nó với chu kỳ khoảng 243 ngày Trái Đất.
                         </p>
                         <br />
                         <a href="">Xem Thêm</a>
@@ -546,10 +546,11 @@
                       <div class="decs">
                         <h1>Trái Đất - Earth</h1>
                         <p>
-                          Hệ Mặt Trời (tên Hán Việt: Thái Dương Hệ) bao gồm Mặt
-                          Trời và 8 hành tinh, bao gồm 4 hành tinh đất đá (Sao
-                          Thuỷ, Sao Kim, Trái Đất, Sao Hoả) và 4 hành tinh khổng
-                          lồ (Sao Mộc, Sao Thổ, Sao Thiên Vương, Sao Hải Vương)
+                          Trái Đất, hay còn gọi là Địa Cầu (chữ Hán: 地球, tiếng
+                          Anh: Earth), là hành tinh thứ ba tính từ Mặt Trời,
+                          đồng thời cũng là hành tinh lớn nhất trong các hành
+                          tinh đất đá của hệ Mặt Trời xét về bán kính, khối
+                          lượng và mật độ của vật chất.
                         </p>
                         <br />
                         <a href="">Xem Thêm</a>
@@ -564,10 +565,12 @@
                       <div class="decs">
                         <h1>Sao Hoả - Mars</h1>
                         <p>
-                          Hệ Mặt Trời (tên Hán Việt: Thái Dương Hệ) bao gồm Mặt
-                          Trời và 8 hành tinh, bao gồm 4 hành tinh đất đá (Sao
-                          Thuỷ, Sao Kim, Trái Đất, Sao Hoả) và 4 hành tinh khổng
-                          lồ (Sao Mộc, Sao Thổ, Sao Thiên Vương, Sao Hải Vương)
+                          Sao Hỏa (tiếng Anh: Mars) hay Hỏa Tinh (chữ Hán: 火星)
+                          là hành tinh thứ tư ở Hệ Mặt Trời và là hành tinh đất
+                          đá ở xa Mặt Trời nhất, với bán kính bé thứ hai so với
+                          các hành tinh khác. Sao Hoả có màu cam đỏ do bề mặt
+                          của hành tinh được bao phủ bởi lớp vụn sắt(III) oxit,
+                          do đó còn có tên gọi khác là "hành tinh đỏ".
                         </p>
                         <br />
                         <a href="">Xem Thêm</a>
@@ -584,10 +587,12 @@
                       <div class="decs">
                         <h1>Sao Mộc - Jupiter</h1>
                         <p>
-                          Hệ Mặt Trời (tên Hán Việt: Thái Dương Hệ) bao gồm Mặt
-                          Trời và 8 hành tinh, bao gồm 4 hành tinh đất đá (Sao
-                          Thuỷ, Sao Kim, Trái Đất, Sao Hoả) và 4 hành tinh khổng
-                          lồ (Sao Mộc, Sao Thổ, Sao Thiên Vương, Sao Hải Vương)
+                          Sao Mộc (tiếng Anh: Jupiter) hay Mộc Tinh (chữ Hán:
+                          木星) là hành tinh thứ năm tính từ Mặt Trời và là hành
+                          tinh lớn nhất trong Hệ Mặt Trời.[12] Nó là hành tinh
+                          khí khổng lồ với khối lượng bằng một phần nghìn của
+                          Mặt Trời nhưng bằng hai lần rưỡi tổng khối lượng của
+                          tất cả các hành tinh khác trong Hệ Mặt Trời cộng lại
                         </p>
                         <br />
                         <a href="">Xem Thêm</a>
@@ -604,10 +609,13 @@
                       <div class="decs">
                         <h1>Sao Thổ - Saturn</h1>
                         <p>
-                          Hệ Mặt Trời (tên Hán Việt: Thái Dương Hệ) bao gồm Mặt
-                          Trời và 8 hành tinh, bao gồm 4 hành tinh đất đá (Sao
-                          Thuỷ, Sao Kim, Trái Đất, Sao Hoả) và 4 hành tinh khổng
-                          lồ (Sao Mộc, Sao Thổ, Sao Thiên Vương, Sao Hải Vương)
+                          Sao Thổ (tiếng Anh: Saturn), hay Thổ Tinh (土星) là
+                          hành tinh thứ sáu tính theo khoảng cách trung bình từ
+                          Mặt Trời và là hành tinh lớn thứ hai về đường kính
+                          cũng như khối lượng, sau Sao Mộc trong hệ Mặt Trời.
+                          Tên tiếng Anh của hành tinh mang tên thần Saturn trong
+                          thần thoại La Mã, ký hiệu thiên văn của hành tinh là
+                          (♄) thể hiện cái liềm của thần
                         </p>
                         <br />
                         <a href="">Xem Thêm</a>
@@ -623,10 +631,11 @@
                       <div class="decs">
                         <h1>Sao Thiên Vương - Uranus</h1>
                         <p>
-                          Hệ Mặt Trời (tên Hán Việt: Thái Dương Hệ) bao gồm Mặt
-                          Trời và 8 hành tinh, bao gồm 4 hành tinh đất đá (Sao
-                          Thuỷ, Sao Kim, Trái Đất, Sao Hoả) và 4 hành tinh khổng
-                          lồ (Sao Mộc, Sao Thổ, Sao Thiên Vương, Sao Hải Vương)
+                          Sao Thiên Vương (tiếng Anh: Uranus) hay Thiên Vương
+                          Tinh (chữ Hán: 天王星) là hành tinh thứ bảy tính từ
+                          Mặt Trời, là hành tinh có bán kính lớn thứ ba và có
+                          khối lượng lớn thứ tư trong Hệ Mặt Trời. Sao Thiên
+                          Vương có thành phần tương tự như Sao Hải Vương.
                         </p>
                         <br />
                         <a href="">Xem Thêm</a>
@@ -642,10 +651,15 @@
                       <div class="decs">
                         <h1>Sao Hải Vương - Neptune</h1>
                         <p>
-                          Hệ Mặt Trời (tên Hán Việt: Thái Dương Hệ) bao gồm Mặt
-                          Trời và 8 hành tinh, bao gồm 4 hành tinh đất đá (Sao
-                          Thuỷ, Sao Kim, Trái Đất, Sao Hoả) và 4 hành tinh khổng
-                          lồ (Sao Mộc, Sao Thổ, Sao Thiên Vương, Sao Hải Vương)
+                          Sao Hải Vương (tiếng Anh: Neptune), hay Hải Vương Tinh
+                          (chữ Hán: 海王星) là hành tinh thứ tám và xa nhất tính
+                          từ Mặt Trời trong Hệ Mặt Trời. Nó là hành tinh lớn thứ
+                          tư về đường kính và lớn thứ ba về khối lượng. Sao Hải
+                          Vương có khối lượng riêng lớn nhất trong số các hành
+                          tinh khí trong hệ Mặt trời. Sao Hải Vương có khối
+                          lượng gấp 17 lần khối lượng của Trái Đất và hơi lớn
+                          hơn khối lượng của Sao Thiên Vương (xấp xỉ bằng 15 lần
+                          của Trái Đất).
                         </p>
                         <br />
                         <a href="">Xem Thêm</a>
